<resources>
    <string name="app_name">JobRetriever</string>
    <string name="birthdate_format">%1$d/%2$d/%3$d</string>
    <string name="profile_infos_candidate">%1$s | %2$s, %3$d ans</string>
    <string name="profile_name_candidate">%1$s %2$s</string>
    <string name="profile_infos_employer">%1$s | %2$s</string>
    <string name="offer_wage">%1$.2f €</string>
    <string name="offer_location">%1$s, %2$s</string>
    <string name="job_title">Job Title</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="confrim">Confirm</string>
    <string name="user_type">User Type</string>
    <string name="welcome_message">Welcome !</string>
    <string name="applicant">Applicant</string>
    <string name="employer">Employer</string>
    <string name="agency">Agency</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="mail">E-mail</string>
    <string name="search_offer_hint">Search for an offer</string>
    <string name="action_search">Search</string>
    <string name="recent_offers">Recent offers</string>
    <string name="description">Description</string>
    <string name="view_offer">View more</string>
    <string name="job_thumbnail">job_thumbnail</string>
    <string name="price">Price</string>
    <string name="plan">Plan</string>
    <string name="selected_offer">Selected Offer</string>
    <string name="city">City</string>
    <string name="candidate_name">Name</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="cover_letter">"Cover Letter "</string>
    <string name="applied_offers">Applied offers</string>
    <string name="saved_offers">Saved Offers</string>
    <string name="company">Company</string>
    <string name="apply">Apply</string>
    <string name="contact">Contact</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="nationality">Nationality</string>
    <string name="choose_plan">Choose a subscription plan</string>
    <string name="search_results_for">Search results for</string>
    <string name="status">Status</string>
    <string name="home">Home</string>
    <string name="companyDuration">Company | Duration</string>
    <string name="search_navbar">Search</string>
    <string name="alerts">Alerts</string>
    <string name="logo_description">App logo</string>
    <string name="company_duration">%1$s | %2$s</string>
    <string name="remember_me">Remember me</string>
    <string name="error_loading_users">Error loading users</string>
    <string name="error_loading_location">Error loading location</string>
    <string name="error_loading_offers">Error loading offers</string>
    <string name="error_checking_mail">Error checking if mail exists</string>
    <string name="error_mail_already_used">Error this mail is already used</string>
    <string name="error_during_sign_up">Error during sign up please try again</string>
    <string name="error_wrong_credentials">Error wrong mail or password</string>
    <string name="error_must_be_signed_in">You must be signed in</string>
    <string name="error_offer_not_found">Error offer not found</string>
    <string name="business_name">Business name</string>
    <string name="duration">Duration</string>
    <string name="action_apply">Apply</string>
    <string name="wage">Wage</string>
    <string name="location">Location</string>
    <string name="city_country">City, Country</string>
    <string name="details">Details</string>

    <string name="firstname">Firstname</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut malesuada pharetra justo eu efficitur. Donec et leo arcu. Integer vitae tristique velit. Nunc mattis eget magna quis aliquam. Aenean aliquet vehicula ligula nec condimentum. Nullam eu erat et lectus semper sagittis. Donec sit amet turpis faucibus elit molestie auctor. Donec in scelerisque orci, eget egestas lorem. Proin malesuada interdum nisl, a vestibulum lectus congue eu. Donec ac lacus diam. Phasellus gravida ultrices enim rhoncus pharetra. Ut elementum nisl et nisl dictum consequat. Vestibulum laoreet, est eget volutpat fermentum, odio eros iaculis felis, in mattis lorem nibh in turpis. Proin ut gravida diam, id fringilla neque. Nullam elementum lorem quis fermentum aliquam. In vestibulum nibh in sapien tincidunt, sed finibus erat ullamcorper.</string>
    <string name="upload">Upload</string>
    <string name="create_offer">Create an Offer</string>
    <string name="field">Field</string>
    <string name="manager_name" >Manager</string>
    <string name="siret">SIRET</string>
    <string name="verified">Verified</string>
    <string name="application_added">The application has been registered</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="contact_employer">Contact employer</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="denied">Denied</string>
    <string name="awaiting_attachement">Awaiting attachments</string>
    <string name="awaiting_meeting">Awaiting meeting</string>
    <string name="empty_string" translatable="false" />
    <string name="error_creating_application">Error Creating Application</string>
    <string name="offer_creation">Offer Creation</string>
    <string name="lastname">Lastname</string>
    <string name="birthdate">Birthdate</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="informations">Informations</string>
    <string name="download_cv">Download CV</string>
    <string name="error_has_occured">An error has occured</string>
    <string name="required_fields">All fields must be filled</string>
    <string name="unknown_phone_number">Phone number not provided</string>
    <string name="error_adding_offer">Error adding offer</string>
    <string name="error_adding_applications">Error adding aplication</string>
    <string name="no_experiences">No experiences</string>
    <string name="no_educations">No educations</string>
    <string name="disconnected">You have been disconnected</string>
    <string name="available_offers">Available offers</string>
    <string name="CDD">Temporary contract</string>
    <string name="CDI">Permanent contract</string>
    <string name="internship">Internship</string>
    <string name="sandwish_course">Block release training</string>
    <string name="applications">Applications</string>
    <string name="required">Required</string>
</resources>