<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/offer_job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/offer_busines_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/offer_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/offer_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/offer_favorite"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:contentDescription="@string/add_to_favorites"
            />

        <ImageButton
            android:layout_toEndOf="@id/offer_favorite"
            android:id="@+id/contact_phone"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_phone_24"
            android:contentDescription="@string/contact_employer"
            />

        <ImageButton
            android:layout_toEndOf="@id/contact_phone"
            android:id="@+id/contact_email"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_email_24"
            android:contentDescription="@string/contact_employer"
            />

        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/offer_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_apply"
            android:visibility="gone"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:textSize="18sp"
                android:id="@+id/offer_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/lorem_ipsum" />

            <TextView
                android:textStyle="bold"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/wage"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/offer_wage"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/offer_wage" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
