<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/row_shape"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/job_thumbnail"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/job_thumbnail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/row_title"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/job_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/companyDuration"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/row_description"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/view_offer"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
