<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/profile_name"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/informations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/informations"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/contact_phone"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_phone_24"
            android:contentDescription="@string/contact_employer"
            />

        <ImageButton
            android:id="@+id/contact_email"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_email_24"
            android:contentDescription="@string/contact_employer"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/experience"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/exp_detailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/experience"
        android:textColor="@color/black"
        android:textSize="15sp" />

</LinearLayout>